# TACO

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: pages.yml
assets/: index-B6vV5jX-.js  index-D8e6Fmji.css
benchmark/: README.md
benchmark/TACO-Eval/: data.json  resp-claude.json  resp-deepseek.json  resp-llama.json
benchmark/TACO-Judge/: annotated-claude-3.5-sonnet.jsonl  chatgpt4o.jsonl  gemini-1.5-pro.jsonl  llama3.1-405b.jsonl
benchmark/TACO-Judge-Java/: data_java_annotated.json  data_java_annotated.jsonl
examples/: config.example.yml
public/benchmark/: README.md  index.html
scripts/: local-server.mjs  sync-pages.mjs
src/: App.tsx  index.html  styles.css
src/taco/: engine.ts  json.ts  llmClient.ts  prompts.ts  types.ts
taco_tool/: __init__.py  cli.py  engine.py  io.py  json_utils.py  llm.py  prompts.py  schema.py
